--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 dataclasses-json==0.6.6
+deprecation==2.1.0
 distro==1.9.0
 dnspython==2.6.1
 email_validator==2.1.1
@@ -26,6 +27,7 @@ google-auth==2.30.0
 google-auth-httplib2==0.2.0
 google-generativeai==0.5.4
 googleapis-common-protos==1.63.1
+gotrue==2.4.4
 greenlet==3.0.3
 groq==0.9.0
 grpcio==1.64.1
@@ -51,6 +53,7 @@ langchain-pinecone==0.1.1
 langchain-text-splitters==0.2.1
 langsmith==0.1.75
 load-dotenv==0.1.0
+lxml==5.2.2
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.21.3
@@ -62,6 +65,7 @@ orjson==3.10.3
 packaging==23.2
 pinecone-client==3.2.2
 pinecone-plugin-interface==0.0.7
+postgrest==0.16.8
 proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.6.0
@@ -71,16 +75,25 @@ pydantic_core==2.18.4
 Pygments==2.18.0
 pyparsing==3.1.2
 pypdf==4.2.0
+PyPDF2==3.0.1
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+realtime==1.0.5
 requests==2.32.3
 rich==13.7.1
 rsa==4.9
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 SQLAlchemy==2.0.30
 starlette==0.37.2
+storage3==0.7.6
+StrEnum==0.4.15
+supabase==2.5.1
+supafunc==0.4.6
 tenacity==8.3.0
 tokenizers==0.19.1
 tqdm==4.66.4
